# mpi_tutorial

./: CMakeLists.txt  README.md  RUN.md  build.sh
hello_world/: hello_world.cpp
install/: hello_world  pingpong  random_count  ring_send_recv  simple_send_recv
p2p/: README.md  pingpong.cpp  random_count.cpp  ring_send_recv.cpp  simple_send_recv.cpp
